tooling/nargo_cli/tests/snapshots/execution_success/shl_signed_regression_9661/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main() -> pub i8 {
    // Safety: comment added by `nargo expand`
    unsafe {
        foo(7_i8)
    }
}

unconstrained fn foo(a: i8) -> i8 {
    let _: i8 = 1_i8 << a;
    a
}
