tooling/nargo_cli/tests/snapshots/execution_success/shl_signed_regression_9661/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0():
    (no terminator instruction)
}
[shl_signed_regression_9661] Circuit output: 7
